; ModuleID = '/home/carl/AnghaBench/linux/fs/nfsd/extr_nfsfh.c__fh_update_old.c'
source_filename = "/home/carl/AnghaBench/linux/fs/nfsd/extr_nfsfh.c__fh_update_old.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dentry = type { i32 }
%struct.svc_export = type { i32 }
%struct.knfsd_fh = type { i64, i32, i32 }
%struct.TYPE_2__ = type { i32, i32 }

@NFSEXP_NOSUBTREECHECK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dentry*, %struct.svc_export*, %struct.knfsd_fh*)* @_fh_update_old to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @_fh_update_old(%struct.dentry* %0, %struct.svc_export* %1, %struct.knfsd_fh* %2) #0 {
  %4 = alloca %struct.dentry*, align 8
  %5 = alloca %struct.svc_export*, align 8
  %6 = alloca %struct.knfsd_fh*, align 8
  store %struct.dentry* %0, %struct.dentry** %4, align 8
  store %struct.svc_export* %1, %struct.svc_export** %5, align 8
  store %struct.knfsd_fh* %2, %struct.knfsd_fh** %6, align 8
  %7 = load %struct.dentry*, %struct.dentry** %4, align 8
  %8 = call %struct.TYPE_2__* @d_inode(%struct.dentry* %7)
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @ino_t_to_u32(i32 %10)
  %12 = load %struct.knfsd_fh*, %struct.knfsd_fh** %6, align 8
  %13 = getelementptr inbounds %struct.knfsd_fh, %struct.knfsd_fh* %12, i32 0, i32 2
  store i32 %11, i32* %13, align 4
  %14 = load %struct.dentry*, %struct.dentry** %4, align 8
  %15 = call %struct.TYPE_2__* @d_inode(%struct.dentry* %14)
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.knfsd_fh*, %struct.knfsd_fh** %6, align 8
  %19 = getelementptr inbounds %struct.knfsd_fh, %struct.knfsd_fh* %18, i32 0, i32 1
  store i32 %17, i32* %19, align 8
  %20 = load %struct.dentry*, %struct.dentry** %4, align 8
  %21 = call i64 @d_is_dir(%struct.dentry* %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %30, label %23

23:                                               ; preds = %3
  %24 = load %struct.svc_export*, %struct.svc_export** %5, align 8
  %25 = getelementptr inbounds %struct.svc_export, %struct.svc_export* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = load i32, i32* @NFSEXP_NOSUBTREECHECK, align 4
  %28 = and i32 %26, %27
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %33

30:                                               ; preds = %23, %3
  %31 = load %struct.knfsd_fh*, %struct.knfsd_fh** %6, align 8
  %32 = getelementptr inbounds %struct.knfsd_fh, %struct.knfsd_fh* %31, i32 0, i32 0
  store i64 0, i64* %32, align 8
  br label %33

33:                                               ; preds = %30, %23
  ret void
}

declare dso_local i32 @ino_t_to_u32(i32) #1

declare dso_local %struct.TYPE_2__* @d_inode(%struct.dentry*) #1

declare dso_local i64 @d_is_dir(%struct.dentry*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
